--- a/r1 部署.md
+++ b/r1 部署.md
@@ -1,6 +1,6 @@
 ---
 date created: 2025年2月13日，星期四，晚上18:14:03
-date modified: 2025年2月20日，星期四，晚上18:35:29
+date modified: 2025年2月20日，星期四，晚上19:05:52
 ---
 # 硬件配置
 ## GPU
@@ -53,7 +53,7 @@ Gloo connectFullMesh failed with [../third_party/gloo/gloo/transport/tcp/pair.cc
 
 官方文档里的示例[example-serving-with-four-a1008-nodes](https://github.com/sgl-project/sglang/tree/main/benchmark/deepseek_v3#example-serving-with-four-a1008-nodes)，配置是`4*8*80(A100)`,使用BF16的进度进行推理时，tp=32是可以的
 而当我们使用的是`4*8*24G(3090)` 做fp8推理时候，config.json规定的`quantization_config.weight_block_size` 是 `[128, 128]` ，intermediate_size=18432, 因此output_partition_size / tp_size = 576 不能被量化后的区块尺寸128整除，所以tp_size不能为32，除非不使用config里的量化方法。
-![[工作/model_deployment/附件/Pasted image 20250213203112.png]]
+![[Pasted image 20250213203112.png]]
 ref:
 [[Bug] deepseek-R1 671b can not set tensor_parallel_size=32 · Issue #3345 · sgl-project/sglang](https://github.com/sgl-project/sglang/issues/3345#issuecomment-2641812423)
 [sglang/benchmark/deepseek_v3 at main · sgl-project/sglang](https://github.com/sgl-project/sglang/tree/main/benchmark/deepseek_v3#troubleshooting)
@@ -61,7 +61,7 @@ ref:
 ### tp=16
 报错：OOM
 需要1.3TB的显存，而当前显存`4*8*24G(3090)`为768G。
-![[工作/model_deployment/附件/1739448504715.png]]
+![[1739448504715.png]]
 
 
 
@@ -78,7 +78,7 @@ ref:
   //   ]
   // },
 ```
-![[工作/model_deployment/附件/Pasted image 20250213181420.png]]
+![[/Pasted image 20250213181420.png]]
 
 
 ```
@@ -105,7 +105,7 @@ ollama run deepseek-r1:671b-q4_K_M
 ### 4卡
 4卡gpu需要设置卸载层数为8，否则会OOM
 加载ollama很久，需要20min
-![[工作/model_deployment/附件/1739782720663_d 1.png]]
+![[1739782720663_d 1.png]]
 推理速度：1.23 tokens/s
 
 ## ollama目前不支持多机推理
@@ -180,10 +180,10 @@ bin/llama-cli -m /home/hanxianlin/.cache/modelscope/hub/bartowski/DeepSeek-R1-GG
 
 ##### 副节点执行情况：
 在三个副节点上执行`bin/rpc-server -p 50052`时，虽然显示发现了8张卡，但实际各个节点的0号显卡被用于模型推理：
-![[工作/model_deployment/附件/Pasted image 20250219165825.png]]
+![[Pasted image 20250219165825.png]]
 
 ##### 主节点执行情况：
-![[工作/model_deployment/附件/Pasted image 20250218173524.png]]
+![[Pasted image 20250218173524.png]]
 
 ###### 推理速度 0.24 tokens/s
 
@@ -191,16 +191,16 @@ bin/llama-cli -m /home/hanxianlin/.cache/modelscope/hub/bartowski/DeepSeek-R1-GG
 node1用了8张，node2,3,10只用了第0号卡
 
 node1
-![[工作/model_deployment/附件/Pasted image 20250218135834.png]]
+![[Pasted image 20250218135834.png]]
 
 
 node2:
-![[工作/model_deployment/附件/Pasted image 20250218135800.png]]
+![[Pasted image 20250218135800.png]]
 
 node3: 
-![[工作/model_deployment/附件/Pasted image 20250218135626.png]]
+![[Pasted image 20250218135626.png]]
 
-node10：![[工作/model_deployment/附件/Pasted image 20250218135546.png]]
+node10：![[Pasted image 20250218135546.png]]
 
 
 
@@ -208,7 +208,7 @@ node10：![[工作/model_deployment/附件/Pasted image 20250218135546.png]]
 #### node里每个卡设置一个rpc-server
 ##### 副节点
 在节点执行依次8个rpc命令（对应8个rpc后端）的shell脚本：
-![[工作/model_deployment/附件/start_llama_cpp_multinode 2.sh]]
+![[start_llama_cpp_multinode 2.sh]]
 ##### 主节点
 ```bash 
 docker exec -it llamacpp_from_torch /bin/bash
@@ -232,21 +232,21 @@ bin/llama-cli -m /home/hanxianlin/.cache/modelscope/hub/bartowski/DeepSeek-R1-GG
 共使用`3*8`张显卡
 报错：llama.cpp/ggml/src/ggml-backend.cpp:1455: GGML_ASSERT(n_backends <= GGML_SCHED_MAX_BACKENDS) failed
 原因：超过16个rpc服务就会报错
-![[工作/model_deployment/附件/Pasted image 20250218183127.png]]
+![[Pasted image 20250218183127.png]]
 
 ##### 2台服务器
 启动的程序本身占了一个rpc进程，因此最多使用15张卡。实测使用15张卡时依然会报错，最后使用了14张卡成功
 加载需要大约8min
-![[工作/model_deployment/附件/Pasted image 20250218184301.png]]
+![[Pasted image 20250218184301.png]]
 
 ###### 推理速度0.69 token/s
-![[工作/model_deployment/附件/Pasted image 20250218192738.png]]
+![[Pasted image 20250218192738.png]]
 
 
 ### llama.cpp多机部署总结：
 模型加载：
 目前加载模型的时候不是从各个rpc的本地加载，而是从主节点通过网络加载到各个rpc后端，很慢[Feature Request: RPC offloading using a local model copy · Issue #10095 · ggml-org/llama.cpp](https://github.com/ggml-org/llama.cpp/issues/10095)
-每次加载r1-q4的模型需要大约半小时![[工作/model_deployment/附件/Pasted image 20250218113730.png]]
+每次加载r1-q4的模型需要大约半小时![[Pasted image 20250218113730.png]]
 模型推理：
 GPU的算力很少使用，主要依靠CPU推理。
 
@@ -291,7 +291,7 @@ vllm serve  \
 	--trust-remote-code
 ```
 ### 报错：
-![[工作/model_deployment/附件/bfb206c1202f52d7987aa587ae1afdc.png]]
+![[bfb206c1202f52d7987aa587ae1afdc.png]]
 VLLM对于GGUF的量化依赖于transformers库的支持，而当前其并不支持deepseek2的架构 [GGUF and interaction with Transformers](https://huggingface.co/docs/transformers/gguf)
 
 
@@ -322,7 +322,7 @@ vllm serve  /share/deepseek/DeepSeek-R1_671B_awq/ \
 
 #### 推理速度
 大约11~12tokens/s
-![[工作/model_deployment/附件/2931c9e881158cd34e038addc8a5d09.png]]
+![[2931c9e881158cd34e038addc8a5d09.png]]
 
 #### 生成质量
 在回答问题的时候有思维链，效果主观感觉还不错，还有待更多任务上的评测。
